--- a/public/src/components/Modal/Modal.scss
+++ b/public/src/components/Modal/Modal.scss
@@ -37,8 +37,8 @@ main.cardnote-modal {
     min-width: 300px;
     width: 80vw;
     max-width: 500px;
-    transition: 5s ease;
     box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.1);
+    // padding-bottom: 5px;
 
     .header {
       user-select: none;
@@ -81,12 +81,12 @@ main.cardnote-modal {
           transition: all 0.2s ease;
         }
         .left {
-          right: 61px;
+          right: 51px;
           height: 2.5px;
           width: 38px;
         }
         .right {
-          width: 52px;
+          width: 45px;
           height: 2.5px;
           right: 0;
         }
@@ -107,47 +107,60 @@ main.cardnote-modal {
       padding: $padding;
     }
     .container {
-      padding: 10px;
-      p {
-        @include flex;
-        @include robotoFont;
-        min-height: 50px;
-      }
-      .align {
+      // padding-top: 15px;
+
+      padding: 15px 10px 0;
+      div {
         display: flex;
-        justify-content: flex-end;
-        .buttons {
-          width: 50%;
-          display: flex;
-          justify-content: flex-end;
-          gap: 4px;
-          .yes {
-            @include montFont;
-            cursor: pointer;
-            padding: 2px 10px;
-            background-color: #8cc63f;
-            border-radius: 4px;
-            width: $btnWidth;
-            border: none;
-            color: white;
-            font-weight: bold;
-            @include flex;
-            height: $btnHeight;
-          }
-          .no {
-            @include montFont;
-            cursor: pointer;
-            height: $btnHeight;
-            border-radius: 4px;
-            width: $btnWidth;
-            padding: 2px 10px;
-            color: #858585;
-            background-color: white;
-            border: 1px solid #858585;
-          }
-        }
       }
+      p:nth-child(1) {
+        // align-items: center;
+        text-align: center;
+        @include robotoFont;
+        // min-height: 50px;
+        white-space: nowrap;
+        overflow: hidden !important;
+        text-overflow: ellipsis;
+        padding-bottom: 10px;
+      }
+      p:nth-child(2) {
+        @include robotoFont;
+      }
+      //   .align {
+      //     display: flex;
+      //     justify-content: flex-end;
+      //     .buttons {
+      //       width: 50%;
+      //       display: flex;
+      //       justify-content: flex-end;
+      //       gap: 4px;
+      //       .yes {
+      //         @include montFont;
+      //         cursor: pointer;
+      //         padding: 2px 10px;
+      //         background-color: #8cc63f;
+      //         border-radius: 4px;
+      //         width: $btnWidth;
+      //         border: none;
+      //         color: white;
+      //         font-weight: bold;
+      //         @include flex;
+      //         height: $btnHeight;
+      //       }
+      //       .no {
+      //         @include montFont;
+      //         cursor: pointer;
+      //         height: $btnHeight;
+      //         border-radius: 4px;
+      //         width: $btnWidth;
+      //         padding: 2px 10px;
+      //         color: #858585;
+      //         background-color: white;
+      //         border: 1px solid #858585;
+      //       }
+      //     }
     }
+    // }
   }
 }
 
